# zrive-ds

./: .gitignore  Makefile  pyproject.toml
data/: README.md
data/module_1/: README.md
data/module_2/module_2_1/: README.md
data/module_2/module_2_2/: README.md
documentation/: README.md  basic-commands.txt  dependences-control-uv.txt  uv-migration-enviroment.txt
src/module_1/: module_1_functions.py  module_1_meteo_api.py  module_1_variables.py
tests/module_1/: test_meteo_api.py  test_meteo_variables.py
